# useful_sqlite_extensions

./: .gitignore  LICENSE  README.md
docs/: Makefile  blob_funcs.html  blob_funcs.md  bloom_filter1.html  bloom_filter1.md  json_funcs.html  json_funcs.md  math_funcs.html  math_funcs.md  nss_tables.html  nss_tables.md  pcre2_funcs.html  pcre2_funcs.md  posix_re_funcs.html  posix_re_funcs.md  string_funcs.html  string_funcs.md
src/: CMakeLists.txt  blob_funcs.c  bloom_filter.c  config.h.in  egc_str_funcs.c  group.c  icu_extras.c  json_funcs.c  math_funcs.c  more_str_funcs.c  nss_tables.c  nss_tables.h  passwd.c  pcre2_funcs.c  posix_re_funcs.c  stripaccents.c
src/cmake/: FindPCRE2.cmake
tools/: README.md  csv2sqlite  demo_csvimport.sh  table2sql
